--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: `cat .python-version`
+          python-version: $(cat .python-version)
           cache: 'poetry'
       - run: poetry install
 
